--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,113 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
-
-  </body>
+<html class="page" lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Cat Energy</title>
+</head>
+<body class="page__body">
+  <header class="page-header">
+    <a href="" class="page-header__logo logo">
+      <img src="img/logo-mobile.svg" alt="cat energy" class="logo__img">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <div class="main-nav__container">
+        <ul class="main-nav__list">
+          <li class="main-nav__item--current"><a href="">Главная</a></li>
+          <li class="main-nav__item"><a href="">Каталог продукции</a></li>
+          <li class="main-nav__item"><a href="">Подбор программы</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="page__main">
+    <section class="hero">
+      <div class="hero__container">
+        <h1 class="hero__title">Функциональное питание для котов</h1>
+        <p class="hero__slogan">Занялся собой? Займись котом!</p>
+        <a href="" class="button">Подобрать программу</a>
+      </div>
+    </section>
+    <section class="programs">
+      <div class="programs__container">
+        <h2 class="visually-hidden">Наши программы</h2>
+        <ul class="programs__list">
+          <li class="programs__item programs__item--lose">
+            <h3 class="programs__title">Похудение</h3>
+            <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a href="" class="programs__link">Каталог Slim</a>
+          </li>
+          <li class="programs__item programs__item--gain">
+            <h3 class="programs__title">Набор массы</h3>
+            <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a href="" class="programs__link">Каталог Pro</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="steps">
+      <div class="steps__container">
+        <h2 class="steps__title">Как это работает</h2>
+        <ul class="steps__list">
+          <li class="steps__item steps__item--consist">
+            <p class="steps__descriptions">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="steps__item steps__item--form">
+            <p class="steps__descriptions">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="steps__item steps__item--change">
+            <p class="steps__descriptions">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="steps__item steps__item--time">
+            <p class="steps__descriptions">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="example">
+      <div class="example__container">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+        <div class="example__result"><span>5 кг</span><span>снижение веса</span></div>
+        <div class="example__result"><span>60 дней</span><span>потрачено времени</span></div>
+        <p class="example__bill">Затраты на питание:<span>15000 руб.</span></p>
+        <div class="example__photo">
+          <img src="img/before-mobile 1.png" alt="фото до" class="example__before">
+          <img src="img/after-mobile 1.png" alt="фото после" class="example__after">
+          <div class="controls">
+            <div class="controls__button controls__before">Было</div>
+            <div class="controls__toggle"></div>
+            <div class="controls__button controls__after">Стало</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="map">
+      <div class="map__container">
+        <p class="map__title">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="map__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <div class="map__location"></div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__container">
+      <div class="page-footer__logo logo">
+        <img src="img/footer-logo 2.svg" alt="">
+      </div>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item"><a href="" class="social__link social__link--vk">Мы ВКонтакте</a></li>
+          <li class="social__item"><a href="" class="social__link social__link--fb">Мы в Фейсбуке</a></li>
+          <li class="social__item"><a href="" class="social__link social__link--inst">Мы в Инстаграмме</a></li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy</a>
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
