--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,9 +46,9 @@
         <h1 class="catalog__title">Каталог товаров</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
-            <img src="" alt="" class="product-card__image">
+            <a href="#" class="product-card__link"><img src="" alt=""></a>
             <div class="product-card__title">
-              <span>Cat Energy Pro 500 г</span>
+            <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
             <div class="product-card__weight">
               <span>Масса</span><span>500 г</span>
@@ -62,9 +62,9 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <img src="" alt="" class="product-card__image">
+            <a href="#" class="product-card__link"><img src="" alt=""></a>
             <div class="product-card__title">
-              <span>Cat Energy Pro 1000 г</span>
+              <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
             <div class="product-card__weight">
               <span>Масса</span><span>1000 г</span>
@@ -78,9 +78,9 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <img src="" alt="" class="product-card__image">
+            <a href="#" class="product-card__link"><img src="" alt=""></a>
             <div class="product-card__title">
-              <span>Cat Energy Pro 500 г</span>
+              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
             <div class="product-card__weight">
               <span>Масса</span><span>500 г</span>
@@ -94,9 +94,9 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <img src="" alt="" class="product-card__image">
+            <a href="#" class="product-card__link"><img src="" alt=""></a>
             <div class="product-card__title">
-              <span>Cat Energy Pro 1000 г</span>
+              <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
             <div class="product-card__weight">
               <span>Масса</span><span>1000 г</span>
@@ -110,9 +110,9 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <img src="" alt="" class="product-card__image">
+            <a href="#" class="product-card__link"><img src="" alt=""></a>
             <div class="product-card__title">
-              <span>Cat Energy Pro 500 г</span>
+              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
             <div class="product-card__weight">
               <span>Масса</span><span>500 г</span>
@@ -126,9 +126,9 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <img src="" alt="" class="product-card__image">
+            <a href="#" class="product-card__link"><img src="" alt=""></a>
             <div class="product-card__title">
-              <span>Cat Energy Pro 1000 г</span>
+              <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
             <div class="product-card__weight">
               <span>Масса</span><span>1000 г</span>
@@ -142,9 +142,9 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <img src="" alt="" class="product-card__image">
+            <a href="#" class="product-card__link"><img src="" alt=""></a>
             <div class="product-card__title">
-              <span>Cat Energy Pro 500 г</span>
+              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
             <div class="product-card__weight">
               <span>Масса</span><span>500 г</span>
@@ -182,7 +182,7 @@
               <a href="" class="product-card-extra button">Заказать</a>
             </div>
             </li>
-            <li class="catalog-extra__item product-card-extra">
+             <li class="catalog-extra__item product-card-extra">
             <div class="product-card-extra">
               <div class="product-card-extra__name">
                 <span>Питьевая вода</span>
@@ -283,6 +283,6 @@
         </a>
       </div>
     </div>
-  </footer>
-</body>
+  </footer>                                                             
+  </body>
 </html>
