--- a/source/index.html
+++ b/source/index.html
@@ -46,6 +46,7 @@
       <div class="hero__container">
         <h1 class="hero__title">Функциональное питание для котов</h1>
         <p class="hero__slogan">Занялся собой? Займись котом!</p>
+        <img src="img/index-can-mobile 1.png" alt="Cat Energy" class="hero__img" width="280px" height="270px">
         <a href="form.html" class="hero__button button">Подобрать программу</a>
       </div>
     </section>
