Стилизация главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -90,8 +90,8 @@
       <div class="example__container">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-        <div class="example__result"><span>5 кг</span><span>снижение веса</span></div>
-        <div class="example__result"><span>60 дней</span><span>потрачено времени</span></div>
+        <div class="example__result"><span class="example__result-big">5 кг</span><span class="example__result-small">снижение веса</span></div>
+        <div class="example__result"><span class="example__result-big">60 дней</span><span class="example__result-small">потрачено времени</span></div>
         <p class="example__bill">Затраты на питание:<span>15000 руб.</span></p>
         <div class="example__photo example">
           <div class="example__before">
