Стилизация страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cat Energy</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
   <header class="page-header">
@@ -50,13 +51,13 @@
             <div class="product-card__title">
             <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
-            <div class="product-card__weight">
+            <div class="product-card__info product-card__info--weight">
               <span>Масса</span><span>500 г</span>
             </div>
-            <div class="product-card__taste">
+            <div class="product-card__info product-card__info--taste">
               <span>Вкус</span><span>Курица</span>
             </div>
-            <div class="product-card__price">
+            <div class="product-card__info product-card__info--price">
               <span>Цена</span><span>700 р.</span>
             </div>
             <a href="" class="product-card__button button">Заказать</a>
@@ -66,13 +67,13 @@
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
-            <div class="product-card__weight">
+            <div class="product-card__info product-card__info--weight">
               <span>Масса</span><span>1000 г</span>
             </div>
-            <div class="product-card__taste">
+            <div class="product-card__info product-card__info--taste">
               <span>Вкус</span><span>Курица</span>
             </div>
-            <div class="product-card__price">
+            <div class="product-card__info product-card__info--price">
               <span>Цена</span><span>1000 р.</span>
             </div>
             <a href="" class="product-card__button button">Заказать</a>
@@ -82,13 +83,13 @@
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
-            <div class="product-card__weight">
+            <div class="product-card__info product-card__info--weight">
               <span>Масса</span><span>500 г</span>
             </div>
-            <div class="product-card__taste">
+            <div class="product-card__info product-card__info--taste">
               <span>Вкус</span><span>Рыба</span>
             </div>
-            <div class="product-card__price">
+            <div class="product-card__info product-card__info--price">
               <span>Цена</span><span>700 р.</span>
             </div>
             <a href="" class="product-card__button button">Заказать</a>
@@ -98,13 +99,13 @@
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
-            <div class="product-card__weight">
+            <div class="product-card__info product-card__info--weight">
               <span>Масса</span><span>1000 г</span>
             </div>
-            <div class="product-card__taste">
+            <div class="product-card__info product-card__info--taste">
               <span>Вкус</span><span>Рыба</span>
             </div>
-            <div class="product-card__price">
+            <div class="product-card__info product-card__info--price">
               <span>Цена</span><span>1000 р.</span>
             </div>
             <a href="" class="product-card__button button">Заказать</a>
@@ -114,13 +115,13 @@
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
-            <div class="product-card__weight">
+            <div class="product-card__info product-card__info--weight">
               <span>Масса</span><span>500 г</span>
             </div>
-            <div class="product-card__taste">
+            <div class="product-card__info product-card__info--taste">
               <span>Вкус</span><span>Гречка</span>
             </div>
-            <div class="product-card__price">
+            <div class="product-card__info product-card__info--price">
               <span>Цена</span><span>400 р.</span>
             </div>
             <a href="" class="product-card__button button">Заказать</a>
@@ -130,13 +131,13 @@
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
-            <div class="product-card__weight">
+            <div class="product-card__info product-card__info--weight">
               <span>Масса</span><span>1000 г</span>
             </div>
-            <div class="product-card__taste">
+            <div class="product-card__info product-card__info--taste">
               <span>Вкус</span><span>Гречка</span>
             </div>
-            <div class="product-card__price">
+            <div class="product-card__info product-card__info--price">
               <span>Цена</span><span>700 р.</span>
             </div>
             <a href="" class="product-card__button button">Заказать</a>
@@ -146,23 +147,24 @@
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
-            <div class="product-card__weight">
+            <div class="product-card__info product-card__info--weight">
               <span>Масса</span><span>500 г</span>
             </div>
-            <div class="product-card__taste">
+            <div class="product-card__info product-card__info--taste">
               <span>Вкус</span><span>Рис</span>
             </div>
-            <div class="product-card__price">
+            <div class="product-card__info product-card__info--price">
+              <span>Цена</span><span>500 р.</span>
             </div>
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card--show-more">
             <div class="product-card__plus"></div>
             <div class="product-card__title">
-              <span>Показать еще 100500 товаров</span>
-              <small>На самом деле вкусов гораздо больше</small>
+              <span class="product-card__text">Показать еще 100500 товаров</span>
+              <small class="product-card__note">На самом деле вкусов гораздо больше!</small>
             </div>
-            <a href="" class="product-card__button button--grey">Показать все</a>
+            <a href="" class="product-card__button button button--grey">Показать все</a>
           </li>
         </ul>
         <h2 class="catalog__subtitle">Дополнительные товары</h2>
@@ -225,7 +227,6 @@
           </ul>
         </div>
         <div class="product-promo">
-          <img class="product-promo__icon"src="" alt="">
           <p class="product-promo__details">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </div>
