Исправлен блок Живой пример

--- a/source/index.html
+++ b/source/index.html
@@ -97,31 +97,41 @@
     <section class="example">
       <div class="example__container">
         <h2 class="example__title">Живой пример</h2>
-        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-          <div class="example__results">
-            <div class="example__results-data">
-              <div class="example__result">
-                <span class="example__result-big">5 кг</span>
-                <span class="example__result-small">снижение веса</span>
-              </div>
-              <div class="example__result">
-                <span class="example__result-big">60 дней</span>
-                <span class="example__result-small">потрачено времени</span>
+      </div>
+      <div class="example__content">
+        <div class="example__content-wrapper">
+          <div class="example__text">
+            <div class="example__text-wrapper">
+              <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+              <div class="example__results">
+                <div class="example__results-data">
+                  <div class="example__result">
+                    <span class="example__result-big">5 кг</span>
+                    <span class="example__result-small">снижение веса</span>
+                  </div>
+                  <div class="example__result">
+                    <span class="example__result-big">60 дней</span>
+                    <span class="example__result-small">потрачено времени</span>
+                  </div>
+                </div>
+                <p class="example__bill">Затраты на питание:<span class="example__bill-count">15000 руб.</span></p>
               </div>
             </div>
-            <p class="example__bill">Затраты на питание:<span class="example__bill-count">15000 руб.</span></p>
           </div>
-        <div class="example__photo">
-          <div class="example__before">
-            <img src="img/before-mobile 1.png" alt="фото до" width="311" height="232">
-          </div>
-          <div class="example__after">
-            <img src="img/after-mobile 1.png" alt="фото после" width="251" height="240">
-          </div>
-          <div class="controls">
-            <button class="controls__button controls__button--before">Было</button>
-            <div class="controls__toggle"></div>
-            <button class="controls__button controls__button--after">Стало</button>
+          <div class="example__photo">
+            <div class="example__photo-wrapper">
+              <div class="example__before">
+                <img src="img/before-mobile 1.png" alt="фото до" width="311" height="232">
+              </div>
+              <div class="example__after">
+                <img src="img/after-mobile 1.png" alt="фото после" width="251" height="240">
+              </div>
+              <div class="controls">
+                <button class="controls__button controls__button--before">Было</button>
+                <div class="controls__toggle"></div>
+                <button class="controls__button controls__button--after">Стало</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
