--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,44 +2,49 @@
 <html class="page" lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cat Energy</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo logo" href="index.html">
-      <img src="img/logo-mobile.svg" alt="Cat Energy" width="34px" height="38px">
-      <svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0)">
-        <path d="M1.60253 22.0513C0.468358 20.3682 -0.0946573 18.3503 3.016e-05 16.3077V7.79487C-0.137317 5.73031 0.390444 3.67661 1.50238 1.94872C2.6041 0.615385 4.30676 0 6.81067 0C9.31458 0 10.9171 0.615385 11.9187 1.74359C13.006 3.17255 13.5409 4.96181 13.421 6.76923V8.82051H8.51333V6.46154C8.55297 5.76385 8.45065 5.06533 8.21286 4.41026C8.08576 4.14583 7.88431 3.9264 7.63443 3.78018C7.38455 3.63395 7.09766 3.56763 6.81067 3.58974C6.10958 3.58974 5.60879 3.79487 5.40848 4.30769C5.18191 5.03643 5.08025 5.79984 5.10801 6.5641V17.5385C5.05512 18.2799 5.19327 19.0227 5.50864 19.6923C5.70895 20.2051 6.20973 20.4103 6.91083 20.4103C7.61192 20.4103 8.01255 20.2051 8.21286 19.6923C8.44058 18.9992 8.54242 18.2692 8.51333 17.5385V15.0769H13.421V17.1282C13.5229 18.9651 12.9911 20.7803 11.9187 22.2564C10.9171 23.4872 9.21443 24.1026 6.81067 24.1026C4.40692 24 2.6041 23.3846 1.60253 22.0513Z" fill="#111111"/>
-        <path d="M19.3302 0.307617H25.0391L29.2457 23.6922H24.6385L23.8372 18.7692H20.5321L19.7308 23.6922H15.0235L19.3302 0.307617ZM23.4366 15.6922L22.2347 6.56403L21.0329 15.6922H23.4366Z" fill="#111111"/>
-        <path d="M32.7512 4.20505H29.3459V0.307617H41.2645V4.10249H37.8592V23.6922H32.7512V4.20505Z" fill="#111111"/>
-        <path d="M50.3787 0.307617H59.1925V2.76916H53.4836V10.4615H58.0908V12.8204H53.4836V21.4358H59.1925V23.7948H50.2786V0.307617H50.3787Z" fill="#111111"/>
-        <path d="M61.7966 0.307617H64L70.5102 15.7948V0.307617H73.1143V23.6922H71.1111L64.5008 7.69223V23.6922H61.7966V0.307617Z" fill="#111111"/>
-        <path d="M76.119 0.307617H84.9327V2.76916H79.2238V10.4615H83.831V12.8204H79.2238V21.4358H84.9327V23.7948H76.119V0.307617Z" fill="#111111"/>
-        <path d="M87.5368 0.3076H92.144C93.9564 0.179397 95.7575 0.685711 97.252 1.7435C98.3537 2.66657 98.8545 4.3076 98.8545 6.46145C98.8545 9.4358 97.9531 11.282 96.0501 11.8973L99.2551 23.5897H96.1503L93.1456 12.6153H90.6416V23.5897H87.4366V0.3076H87.5368ZM91.9437 10.3589C92.9762 10.446 94.0054 10.1553 94.8482 9.53837C95.4492 9.02555 95.7496 7.99991 95.7496 6.46145C95.7774 5.69719 95.6757 4.93378 95.4492 4.20504C95.2237 3.68211 94.8366 3.24964 94.3474 2.97427C93.6576 2.65236 92.9003 2.51137 92.144 2.56401H90.7418V10.2563H91.9437V10.3589Z" fill="#111111"/>
-        <path d="M102.861 21.9489C101.82 20.1556 101.331 18.0824 101.458 16.0002V8.20531C101.434 6.719 101.602 5.23592 101.959 3.79506C102.294 2.71836 102.962 1.78243 103.862 1.12839C104.981 0.450519 106.271 0.129161 107.568 0.205314C109.671 0.205314 111.174 0.718135 112.075 1.84634C113.112 3.33607 113.608 5.15002 113.477 6.97455V7.79506H110.473V7.07711C110.477 6.21813 110.41 5.36032 110.272 4.51301C110.188 3.97756 109.9 3.49816 109.471 3.17967C108.908 2.80128 108.24 2.62124 107.568 2.66685C106.85 2.61973 106.139 2.83809 105.565 3.28224C105.329 3.48554 105.137 3.73594 104.999 4.01811C104.861 4.30029 104.781 4.60829 104.764 4.92326C104.632 5.84017 104.565 6.76567 104.563 7.69249V16.4104C104.49 17.7386 104.694 19.0676 105.164 20.3079C105.565 21.1284 106.366 21.4361 107.568 21.4361C108.043 21.4966 108.524 21.4121 108.952 21.1931C109.379 20.9741 109.734 20.6304 109.972 20.2053C110.501 18.9083 110.741 17.5067 110.673 16.1027V14.4617H107.768V12.1028H113.577V23.6925H111.574L111.274 21.0258C111.011 21.9195 110.464 22.6977 109.72 23.2366C108.976 23.7756 108.078 24.0443 107.167 24.0002C106.34 24.05 105.513 23.8887 104.761 23.5307C104.01 23.1727 103.357 22.6291 102.861 21.9489Z" fill="#111111"/>
-        <path d="M119.988 15.4871L115.08 0.410156H118.085L121.59 11.6922L124.995 0.410156H128L123.092 15.4871V23.6922H120.088V15.4871H119.988Z" fill="#111111"/>
-        </g>
-        <defs>
-        <clipPath id="clip0">
-        <rect width="128" height="24" fill="white"/>
-        </clipPath>
-        </defs>
-      </svg>
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <div class="main-nav__container">
-        <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="index.html">Главная</a></li>
-          <li class="main-nav__item--current"><a>Каталог продукции</a></li>
-          <li class="main-nav__item"><a href="form.html">Подбор программы</a></li>
-        </ul>
+    <div class="page-header__top">
+      <div class="page-header__container">
+        <a class="page-header__logo logo">
+          <img src="img/logo-mobile.svg" alt="Cat Energy" width="34" height="38">
+          <svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0)">
+            <path d="M1.60253 22.0513C0.468358 20.3682 -0.0946573 18.3503 3.016e-05 16.3077V7.79487C-0.137317 5.73031 0.390444 3.67661 1.50238 1.94872C2.6041 0.615385 4.30676 0 6.81067 0C9.31458 0 10.9171 0.615385 11.9187 1.74359C13.006 3.17255 13.5409 4.96181 13.421 6.76923V8.82051H8.51333V6.46154C8.55297 5.76385 8.45065 5.06533 8.21286 4.41026C8.08576 4.14583 7.88431 3.9264 7.63443 3.78018C7.38455 3.63395 7.09766 3.56763 6.81067 3.58974C6.10958 3.58974 5.60879 3.79487 5.40848 4.30769C5.18191 5.03643 5.08025 5.79984 5.10801 6.5641V17.5385C5.05512 18.2799 5.19327 19.0227 5.50864 19.6923C5.70895 20.2051 6.20973 20.4103 6.91083 20.4103C7.61192 20.4103 8.01255 20.2051 8.21286 19.6923C8.44058 18.9992 8.54242 18.2692 8.51333 17.5385V15.0769H13.421V17.1282C13.5229 18.9651 12.9911 20.7803 11.9187 22.2564C10.9171 23.4872 9.21443 24.1026 6.81067 24.1026C4.40692 24 2.6041 23.3846 1.60253 22.0513Z" fill="#111111"/>
+            <path d="M19.3302 0.307617H25.0391L29.2457 23.6922H24.6385L23.8372 18.7692H20.5321L19.7308 23.6922H15.0235L19.3302 0.307617ZM23.4366 15.6922L22.2347 6.56403L21.0329 15.6922H23.4366Z" fill="#111111"/>
+            <path d="M32.7512 4.20505H29.3459V0.307617H41.2645V4.10249H37.8592V23.6922H32.7512V4.20505Z" fill="#111111"/>
+            <path d="M50.3787 0.307617H59.1925V2.76916H53.4836V10.4615H58.0908V12.8204H53.4836V21.4358H59.1925V23.7948H50.2786V0.307617H50.3787Z" fill="#111111"/>
+            <path d="M61.7966 0.307617H64L70.5102 15.7948V0.307617H73.1143V23.6922H71.1111L64.5008 7.69223V23.6922H61.7966V0.307617Z" fill="#111111"/>
+            <path d="M76.119 0.307617H84.9327V2.76916H79.2238V10.4615H83.831V12.8204H79.2238V21.4358H84.9327V23.7948H76.119V0.307617Z" fill="#111111"/>
+            <path d="M87.5368 0.3076H92.144C93.9564 0.179397 95.7575 0.685711 97.252 1.7435C98.3537 2.66657 98.8545 4.3076 98.8545 6.46145C98.8545 9.4358 97.9531 11.282 96.0501 11.8973L99.2551 23.5897H96.1503L93.1456 12.6153H90.6416V23.5897H87.4366V0.3076H87.5368ZM91.9437 10.3589C92.9762 10.446 94.0054 10.1553 94.8482 9.53837C95.4492 9.02555 95.7496 7.99991 95.7496 6.46145C95.7774 5.69719 95.6757 4.93378 95.4492 4.20504C95.2237 3.68211 94.8366 3.24964 94.3474 2.97427C93.6576 2.65236 92.9003 2.51137 92.144 2.56401H90.7418V10.2563H91.9437V10.3589Z" fill="#111111"/>
+            <path d="M102.861 21.9489C101.82 20.1556 101.331 18.0824 101.458 16.0002V8.20531C101.434 6.719 101.602 5.23592 101.959 3.79506C102.294 2.71836 102.962 1.78243 103.862 1.12839C104.981 0.450519 106.271 0.129161 107.568 0.205314C109.671 0.205314 111.174 0.718135 112.075 1.84634C113.112 3.33607 113.608 5.15002 113.477 6.97455V7.79506H110.473V7.07711C110.477 6.21813 110.41 5.36032 110.272 4.51301C110.188 3.97756 109.9 3.49816 109.471 3.17967C108.908 2.80128 108.24 2.62124 107.568 2.66685C106.85 2.61973 106.139 2.83809 105.565 3.28224C105.329 3.48554 105.137 3.73594 104.999 4.01811C104.861 4.30029 104.781 4.60829 104.764 4.92326C104.632 5.84017 104.565 6.76567 104.563 7.69249V16.4104C104.49 17.7386 104.694 19.0676 105.164 20.3079C105.565 21.1284 106.366 21.4361 107.568 21.4361C108.043 21.4966 108.524 21.4121 108.952 21.1931C109.379 20.9741 109.734 20.6304 109.972 20.2053C110.501 18.9083 110.741 17.5067 110.673 16.1027V14.4617H107.768V12.1028H113.577V23.6925H111.574L111.274 21.0258C111.011 21.9195 110.464 22.6977 109.72 23.2366C108.976 23.7756 108.078 24.0443 107.167 24.0002C106.34 24.05 105.513 23.8887 104.761 23.5307C104.01 23.1727 103.357 22.6291 102.861 21.9489Z" fill="#111111"/>
+            <path d="M119.988 15.4871L115.08 0.410156H118.085L121.59 11.6922L124.995 0.410156H128L123.092 15.4871V23.6922H120.088V15.4871H119.988Z" fill="#111111"/>
+            </g>
+            <defs>
+            <clipPath id="clip0">
+            <rect width="128" height="24" fill="white"/>
+            </clipPath>
+            </defs>
+          </svg>
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <div class="main-nav__container">
+            <ul class="main-nav__list">
+              <li class="main-nav__item"><a class="main-nav__link">Главная</a></li>
+              <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
+              <li class="main-nav__item main-nav__item--current"><a class="main-nav__link" href="form.html">Подбор программы</a></li>
+            </ul>
+          </div>
+        </nav>
       </div>
-    </nav>
+    </div>
   </header>
   <main class="page-main">
     <section class="catalog">
@@ -47,7 +52,7 @@
         <h1 class="catalog__title">Каталог товаров</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
-            <a href="#" class="product-card__link"><img src="" alt=""></a>
+            <a href="#" class="product-card__link"><img src="img/can1-small-mobile.png" alt=""></a>
             <div class="product-card__title">
             <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
@@ -63,7 +68,7 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a href="#" class="product-card__link"><img src="" alt=""></a>
+            <a href="#" class="product-card__link"><img src="img/can1-big-mobile.png" alt=""></a>
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
@@ -79,7 +84,7 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a href="#" class="product-card__link"><img src="" alt=""></a>
+            <a href="#" class="product-card__link"><img src="img/can1-small-mobile.png" alt=""></a>
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
@@ -95,7 +100,7 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a href="#" class="product-card__link"><img src="" alt=""></a>
+            <a href="#" class="product-card__link"><img src="img/can1-big-mobile.png" alt=""></a>
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
@@ -111,7 +116,7 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a href="#" class="product-card__link"><img src="" alt=""></a>
+            <a href="#" class="product-card__link"><img src="img/can1-small-mobile.png" alt=""></a>
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
@@ -127,7 +132,7 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a href="#" class="product-card__link"><img src="" alt=""></a>
+            <a href="#" class="product-card__link"><img src="img/can1-big-mobile.png" alt=""></a>
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
             </div>
@@ -143,7 +148,7 @@
             <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
-            <a href="#" class="product-card__link"><img src="" alt=""></a>
+            <a href="#" class="product-card__link"><img src="img/can1-small-mobile.png" alt=""></a>
             <div class="product-card__title">
               <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
             </div>
@@ -158,7 +163,7 @@
             </div>
             <a href="" class="product-card__button button">Заказать</a>
           </li>
-          <li class="catalog__item product-card--show-more">
+          <li class="catalog__item product-card product-card--show-more">
             <div class="product-card__plus"></div>
             <div class="product-card__title">
               <span class="product-card__text">Показать еще 100500 товаров</span>
@@ -170,7 +175,7 @@
         <h2 class="catalog__subtitle">Дополнительные товары</h2>
         <div class="catalog-extra">
           <ul class="catalog-extra__list">
-            <li class="catalog-extra__item product-card-extra">
+            <li class="catalog-extra__item">
             <div class="product-card-extra">
               <div class="product-card-extra__name">
                 <span>Сахарозаменитель</span>
@@ -181,10 +186,10 @@
               <div class="product-card-extra__price">
                 <span>200 Р.</span>
               </div>
-              <a href="" class="product-card-extra button">Заказать</a>
+              <a href="" class="product-card-extra__link button">Заказать</a>
             </div>
             </li>
-            <li class="catalog-extra__item product-card-extra">
+            <li class="catalog-extra__item">
             <div class="product-card-extra">
               <div class="product-card-extra__name">
                 <span>Питьевая вода</span>
@@ -195,9 +200,9 @@
               <div class="product-card-extra__price">
                 <span>50 Р.</span>
               </div>
-              <a href="" class="product-card-extra button">Заказать</a>
+              <a href="" class="product-card-extra__link button">Заказать</a>
             </div>
-            </li> <li class="catalog-extra__item product-card-extra">
+            </li> <li class="catalog-extra__item">
             <div class="product-card-extra">
               <div class="product-card-extra__name">
                 <span>Молоко</span>
@@ -208,9 +213,10 @@
               <div class="product-card-extra__price">
                 <span>100 Р.</span>
               </div>
-              <a href="" class="product-card-extra button">Заказать</a>
+              <a href="" class="product-card-extra__link button">Заказать</a>
             </div>
-            </li> <li class="catalog-extra__item product-card-extra">
+            </li>
+            <li class="catalog-extra__item">
             <div class="product-card-extra">
               <div class="product-card-extra__name">
                 <span>Витамины</span>
@@ -221,15 +227,26 @@
               <div class="product-card-extra__price">
                 <span>300 Р.</span>
               </div>
-              <a href="" class="product-card-extra button">Заказать</a>
+              <a href="" class="product-card-extra__link button">Заказать</a>
             </div>
             </li>
           </ul>
-        </div>
-        <div class="product-promo">
-          <p class="product-promo__details">Закажите все и получите чехол для кота в подарок!</p>
+          <div class="product-promo">
+            <p class="product-promo__details">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
         </div>
       </div>
+    </section>
+    <section class="map">
+      <div class="map__wrapper">
+        <div class="map__container">
+          <div class="map__text">
+            <p class="map__title">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+            <p class="map__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</p>
+          </div>
+        </div>
+      </div>
+      <div class="map__location"></div>
     </section>
   </main>
   <footer class="page-footer">
