Адаптивная сетка страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <div class="page-header__top">
       <div class="page-header__container">
-        <a class="page-header__logo logo">
+        <a class="page-header__logo logo" href="index.html">
           <img src="img/logo-mobile.svg" alt="Cat Energy" width="34" height="38">
           <svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0)">
