Декоративные элементы страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
-  <header class="page-header">
+  <header class="page-header page-header--index">
     <div class="page-header__top">
       <div class="page-header__container">
         <a class="page-header__logo logo">
@@ -36,7 +36,7 @@
           </svg>
         </a>
       </div>
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--closed main-nav--nojs main-nav--index">
         <button class="main-nav__toggle">
           <span class="visually-hidden">Открыть меню</span>
         </button>
