декоративные элементы подзаголовков

--- a/source/form.html
+++ b/source/form.html
@@ -89,7 +89,9 @@
         </div>
       </div>
       <div class="page-form__delimiter">
-        <h2 class="page-form__subtitle">Контактные данные (владельца кота)</h2>
+        <div class="page-form__container">
+          <h2 class="page-form__subtitle">Контактные данные (владельца кота)</h2>
+        </div>
       </div>
       <div class="page-form__container page-form__customer-contacts">
         <div class="page-form__row">
@@ -102,13 +104,17 @@
         </div>
       </div>
       <div class="page-form__delimiter">
-        <h2 class="page-form__subtitle">Комментарий</h2>
+        <div class="page-form__container">
+          <h2 class="page-form__subtitle">Комментарий</h2>
+        </div>
       </div>
       <div class="page-form__container">
         <textarea class="page-form__input page-form__label page-form__textarea" name="comment" id="cat-comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
       </div>
       <div class="page-form__delimiter">
-        <h2 class="page-form__subtitle">Дополнительно</h2>
+        <div class="page-form__container">
+          <h2 class="page-form__subtitle">Дополнительно</h2>
+        </div>
       </div>
       <div class="page-form__container page-form__customer-extra">
         <div class="page-form__row">
