--- a/source/form.html
+++ b/source/form.html
@@ -73,16 +73,16 @@
 
           <div class="page-form__customer-goal">
             <div class="page-form__row">
-              <input class="page-form__radio" type="radio" value="1" name="program" checked>
-              <label class="page-form__label">Похудение</label>
+              <input class="page-form__radio" type="radio" value="1" name="program" id="program1" checked>
+              <label class="page-form__label" for="program1">Похудение</label>
             </div>
             <div class="page-form__row">
-              <input class="page-form__radio" type="radio" value="2" name="program">
-              <label class="page-form__label">Набор массы</label>
+              <input class="page-form__radio" type="radio" value="2" name="program" id="program2">
+              <label class="page-form__label" for="program2">Набор массы</label>
             </div>
             <div class="page-form__row">
-              <input class="page-form__radio" type="radio" value="3" name="program">
-              <label class="page-form__label">Не знаю (нужен совет)</label>
+              <input class="page-form__radio" type="radio" value="3" name="program" id="program3">
+              <label class="page-form__label" for="program3">Не знаю (нужен совет)</label>
             </div>
           </div>
 
