--- a/source/form.html
+++ b/source/form.html
@@ -59,15 +59,15 @@
           <div class="page-form__customer-info">
             <div class="page-form__row">
               <label class="page-form__label" for="cat-name">Имя:*</label>
-              <input class="page-form__input" type="text" id="cat-name" value="">
+              <input class="page-form__input" type="text" id="cat-name" value=""  placeholder="Барсик">
             </div>
             <div class="page-form__row">
               <label class="page-form__label" for="cat-weight">Вес (кг):*</label>
-              <input class="page-form__input" type="text" id="cat-weight" value="">
+              <input class="page-form__input" type="text" id="cat-weight" value=""  placeholder="7">
             </div>
             <div class="page-form__row">
               <label class="page-form__label" for="cat-age">Возраст (лет):</label>
-              <input class="page-form__input" type="text" id="cat-age" value="">
+              <input class="page-form__input" type="text" id="cat-age" value=""  placeholder="7">
             </div>
           </div>
 
@@ -96,11 +96,11 @@
       <div class="page-form__container page-form__customer-contacts">
         <div class="page-form__row">
           <label class="page-form__label" for="cat-mail">E-mail:*</label>
-          <input class="page-form__input" type="email" id="cat-mail" value="">
+          <input class="page-form__input" type="email" id="cat-mail" value="" placeholder="kuklachev@gmail.com">
         </div>
         <div class="page-form__row">
           <label class="page-form__label" for="cat-phone">Телефон:*</label>
-          <input class="page-form__input" type="phone" id="cat-phone" value="">
+          <input class="page-form__input" type="phone" id="cat-phone" value="" placeholder="8 (960) 900-60-90">
         </div>
       </div>
       <div class="page-form__delimiter">
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="page-form__container">
-        <textarea class="page-form__input page-form__label page-form__textarea" name="comment" id="cat-comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
+        <textarea class="page-form__input page-form__label page-form__textarea" name="comment" id="cat-comment" placeholder="Расскажите обо всех повадках кота"></textarea>
       </div>
       <div class="page-form__delimiter">
         <div class="page-form__container">
