рамка блока page-form__customer-goal

--- a/source/form.html
+++ b/source/form.html
@@ -55,7 +55,9 @@
       <div class="page-form__container">
         <h1 class="page-form__title">Подбор программы</h1>
         <p class="page-form__text">Заполните анкету, и мы подберем<br>программу питания для вашего кота</p>
-        <div class="page-form__customer">
+      </div>
+      <div class="page-form__customer">
+        <div class="page-form__customer-info-inner">
           <div class="page-form__customer-info">
             <div class="page-form__row">
               <label class="page-form__label" for="cat-name">Имя:*</label>
@@ -70,7 +72,8 @@
               <input class="page-form__input" type="text" id="cat-age" value=""  placeholder="7">
             </div>
           </div>
-
+        </div>
+        <div class="page-form__customer-goal-inner">
           <div class="page-form__customer-goal">
             <div class="page-form__row">
               <input class="page-form__radio" type="radio" value="1" name="program" id="program1" checked>
@@ -85,7 +88,6 @@
               <label class="page-form__label" for="program3">Не знаю (нужен совет)</label>
             </div>
           </div>
-
         </div>
       </div>
       <div class="page-form__delimiter">
